--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,9 @@ jobs:
         steps:
             # Step 1
             - name: Install AWS CLI
-              uses: unfor19/install-aws-cli-action@v1
+              uses: aws-actions/aws-cli@v2
               with:
-                  version: 1
+                  version: 2
               env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -77,11 +77,7 @@ jobs:
                   name: api
             # Step 3
             - name: Upload to S3
-              run: aws s3 cp api.zip s3://ghosted/api.zip
-              env:
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+              run: aws s3 cp api.zip "s3://ghosted/api.zip"
             # Step 4
             - name: Deploy new Lambda
               run: aws lambda update-function-code --function-name ghosted-python --s3-bucket ghosted --s3-key api.zip
