--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,13 +63,11 @@ jobs:
         steps:
             # Step 1
             - name: Install AWS CLI
-              uses: aws-actions/aws-cli@v2
+              uses: aws-actions/setup-aws-cli@v2
               with:
-                  version: 2
-              env:
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
             # Step 2
             - name: Download Lambda api.zip
               uses: actions/download-artifact@v2
