--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,28 +55,32 @@ jobs:
               with:
                   name: api
                   path: api.zip
-
     continuous-deployment:
         runs-on: ubuntu-latest
         needs: [continuous-integration]
         if: github.ref == 'refs/heads/main'
         steps:
-            # Step 1
             - name: Install AWS CLI
-              uses: aws-actions/setup-aws-cli@v2
+              uses: unfor19/install-aws-cli-action@v1
               with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-            # Step 2
+                  version: 1
+              env:
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
             - name: Download Lambda api.zip
               uses: actions/download-artifact@v2
               with:
                   name: api
-            # Step 3
+
             - name: Upload to S3
               run: aws s3 cp api.zip "s3://ghosted/api.zip"
-            # Step 4
+              env:
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
             - name: Deploy new Lambda
               run: aws lambda update-function-code --function-name ghosted-python --s3-bucket ghosted --s3-key api.zip
               env:
