--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
                   name: api
 
             - name: Upload to S3
-              run: aws s3 cp api.zip "s3://ghosted/api.zip"
+              run: aws configure list && aws s3 cp api.zip "s3://ghosted/api.zip" --debug
               env:
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
