--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
                   path: api.zip
     continuous-deployment:
         runs-on: ubuntu-latest
+
         needs: [continuous-integration]
         if: github.ref == 'refs/heads/main'
         steps:
@@ -73,6 +74,13 @@ jobs:
               uses: actions/download-artifact@v2
               with:
                   name: api
+
+            - name: Configure AWS Credentials 2
+              uses: aws-actions/configure-aws-credentials@v4
+              with:
+                  aws-region: ${{secrets.AWS_DEFAULT_REGION}}
+                  aws-access-key-id: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
             - name: Upload to S3
               run: aws configure list && aws s3 cp api.zip "s3://ghosted/api.zip" --debug
