--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,111 @@
+aiohttp==3.9.0
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+asgiref==3.7.2
+async-timeout==4.0.3
 atomicwrites==1.4.0
 attrs==20.3.0
+backoff==2.2.1
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+cachetools==5.3.2
 certifi==2020.12.5
 chardet==3.0.4
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.4.18
 click==7.1.2
 colorama==0.4.4
-fastapi==0.62.0
-h11==0.11.0
+coloredlogs==15.0.1
+dataclasses-json==0.6.2
+Deprecated==1.2.14
+distro==1.8.0
+exceptiongroup==1.2.0
+fastapi==0.104.1
+filelock==3.13.1
+flatbuffers==23.5.26
+frozenlist==1.4.0
+fsspec==2023.10.0
+google-auth==2.23.4
+googleapis-common-protos==1.61.0
+greenlet==3.0.1
+grpcio==1.59.3
+h11==0.14.0
+httpcore==1.0.2
+httptools==0.6.1
+httpx==0.25.1
+huggingface-hub==0.19.4
+humanfriendly==10.0
 idna==2.10
+importlib-metadata==6.8.0
+importlib-resources==6.1.1
 iniconfig==1.1.1
+jsonpatch==1.33
+jsonpointer==2.4
+kubernetes==28.1.0
+langchain==0.0.339
+langsmith==0.0.66
 mangum==0.10.0
-packaging==20.8
+marshmallow==3.20.1
+mmh3==4.0.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.26.2
+oauthlib==3.2.2
+onnxruntime==1.16.3
+openai==1.3.5
+opentelemetry-api==1.21.0
+opentelemetry-exporter-otlp-proto-common==1.21.0
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+opentelemetry-instrumentation==0.42b0
+opentelemetry-instrumentation-asgi==0.42b0
+opentelemetry-instrumentation-fastapi==0.42b0
+opentelemetry-proto==1.21.0
+opentelemetry-sdk==1.21.0
+opentelemetry-semantic-conventions==0.42b0
+opentelemetry-util-http==0.42b0
+overrides==7.4.0
+packaging==23.2
 pluggy==0.13.1
+posthog==3.0.2
+protobuf==4.25.1
+pulsar-client==3.3.0
 py==1.10.0
-pydantic==1.7.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pydantic==2.5.1
+pydantic_core==2.14.3
 pyparsing==2.4.7
+PyPika==0.48.9
+pyreadline3==3.4.1
 pytest==6.2.0
-requests==2.25.0
-starlette==0.13.6
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.23
+starlette==0.27.0
+sympy==1.12
+tenacity==8.2.3
+tokenizers==0.15.0
 toml==0.10.2
-typing-extensions==3.7.4.3
+tqdm==4.66.1
+typer==0.9.0
+typing-inspect==0.9.0
+typing_extensions==4.8.0
 urllib3==1.26.2
-uvicorn==0.13.1
+uvicorn==0.24.0.post1
+watchfiles==0.21.0
+websocket-client==1.6.4
+websockets==12.0
+wrapt==1.16.0
+yarl==1.9.3
+zipp==3.17.0
