Fix actions changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,14 @@ jobs:
 
         steps:
             # Step 1
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
 
             # Step 2
             - name: Set up Python
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
-                  python-version: 3.9
-                  architecture: x64
+                  python-version: '3.9'
+
             # Step 3
             - name: Install Python Virtual ENV
               run: pip3 install virtualenv
