--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
             - uses: actions/checkout@v4
 
             # Step 2
-            - name: Set up Python
+            - name: Set up Python 3.9
               uses: actions/setup-python@v4
               with:
-                  python-version: '3.9'
+                  python-version: 3.9
 
             # Step 3
             - name: Install Python Virtual ENV
-              run: pip3 install virtualenv
+              run: pip install virtualenv
             # Step 4
             - name: Setup Virtual env
               uses: actions/cache@v2
@@ -32,8 +32,8 @@ jobs:
                       ${{ runner.os }}-venv-
             # Step 5
             - name: Activate and Install Depencies into Virtual env
-              run: python -m venv venv && source venv/bin/activate &&
-                  pip3 install -r requirements.txt
+              run: python3.9 -m venv venv && source venv/bin/activate &&
+                  pip install -r requirements.txt
               if: steps.cache-venv.outputs.cache-hit != 'true'
             # Step 6
             - name: Activate venv and Run Test
