--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
             - name: Create Zipfile archive of Dependencies
               run: |
                   cd ./venv/lib/python3.9/site-packages
-                  zip -r9 ../../../../api.zip . -x 'node_modules/*' 'venv/*'
+                  zip -r9 ../../../../api.zip . -x 'node_modules/*' 'venv/*' '*.pyc' '__pycache__/*'
 
             # Step 8
             - name: Add App to Zip file
