--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
                   pip3 install -r requirements.txt
               if: steps.cache-venv.outputs.cache-hit != 'true'
             # Step 6
-            - name: Activate venv and Run Test
-              run: . venv/bin/activate && pytest
+            - name: Activate venv
+              run: . venv/bin/activate
 
             # Step 7
             - name: Create Zipfile archive of Dependencies
