--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,31 +11,20 @@ jobs:
         steps:
             # Step 1
             - uses: actions/checkout@v2
-
             # Step 2
-            - name: Set up Python 3.9
+            - name: Set up Python
               uses: actions/setup-python@v2
               with:
                   python-version: 3.7
-                  architecture: x64
-
             # Step 3
             - name: Install Python Virtual ENV
-              run: pip3 install virtualenv
-            # Step 4
-            - name: Setup Virtual env
-              uses: actions/cache@v2
-              id: cache-venv
-              with:
-                  path: venv
-                  key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
-                  restore-keys: |
-                      ${{ runner.os }}-venv-
+              run: pip install --upgrade pip && pip install virtualenv
+
             # Step 5
             - name: Activate and Install Depencies into Virtual env
-              run: python -m venv venv && source venv/bin/activate &&
-                  pip3 install -r requirements.txt
-              if: steps.cache-venv.outputs.cache-hit != 'true'
+              run: python3.7 -m venv venv && source venv/bin/activate &&
+                  pip install -r requirements.txt
+
             # Step 6
             - name: Activate venv
               run: . venv/bin/activate
