--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
             # Step 7
             - name: Create Zipfile archive of Dependencies
               run: |
-                  cd ./venv/lib/python/site-packages
+                  cd ./venv/lib/python3.9/site-packages
                   zip -r9 ../../../../api.zip . -x '**/node_modules/*' '**/venv/*' '*.pyc' '__pycache__/*'
 
             # Step 8
